--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,12 +4,23 @@
     <title>NssTest2</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-
   <body>
+    <nav>
+      <ul>
+        <a href="/">
+          <li>Upload history</li>
+        </a>
+        <a href="/datamodels">
+          <li>Tables</li>
+        </a>
+        <a href="/fileuploads/new">
+          <li>Upload Excel file</li>
+        </a>
+      </ul>
+    </nav>
     <%= yield %>
   </body>
 </html>
